# sipxrtc-sua

./: .dockerignore  .editorconfig  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
Dockerfiles/CentOS-7/: .dockerignore  .gitignore  Dockerfile
build-script/: Dockerfile  build.sh  docker-compose.yml
docker/: docker-compose.yml
docker/centos7/: Dockerfile
dockerfiles/development/: Dockerfile
include/private/: globalvars.hxx
scripts/: README.md  build-all.sh  build-dep.sh  build.sh  docker-compose.yml
sipxsua-build/: README.md  docker-compose.yml
sipxsua-build/centos7/: Dockerfile
src/: AppFlags.cc  AppFlags.hh  ArgsFlags.hh  AudioMediaLocalDataGramRecorder.cxx  AudioMediaLocalDataGramRecorder.hxx  AudioMediaUdsReader.cc  AudioMediaUdsReader.cxx  AudioMediaUdsReader.hh  AudioMediaUdsReader.hxx  AudioMediaUdsWriter.cc  AudioMediaUdsWriter.cxx  AudioMediaUdsWriter.hh  AudioMediaUdsWriter.hxx  EventPub.cc  EventPub.hh  IpcFlags.cc  IpcFlags.hh  Poller.cc  Poller.hh  SipFlags.cc  SipFlags.hh  SipXAccount.cc  SipXAccount.cxx  SipXAccount.hh  SipXAccount.hxx  SipXCall.cc  SipXCall.cxx  SipXCall.hh  SipXCall.hxx  SuaLogWriter.cc  SuaLogWriter.hh  UdsBase.cc  UdsBase.hh  UdsReader.cc  UdsReader.hh  UdsWriter.cc  UdsWriter.hh  global.cc  global.cxx  global.hh  (+10 more)
